--- a/src/eda-heatmaps.ipynb
+++ b/src/eda-heatmaps.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "adult-encyclopedia",
+   "id": "applied-mileage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "\n",
-    "# from tqdm.notebook import tqdm\n",
-    "# from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
-    "\n",
     "import matplotlib.style as style\n",
     "style.use('seaborn-colorblind')\n",
     "\n",
@@ -26,8 +22,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "registered-submission",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from file_manager import FileManager\n",
+    "fm = FileManager()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "guided-vampire",
+   "id": "italian-screw",
    "metadata": {},
    "source": [
     "#### Exploring feature relationships\n",
@@ -46,27 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "assured-unemployment",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Similar to previous notebook, normally would just make .py file for this\n",
-    "def clean_data_path() -> str:\n",
-    "    return '/'.join([\n",
-    "        os.getcwd().replace('src', 'data'),\n",
-    "        'season-data-clean.csv'\n",
-    "        \n",
-    "    ])\n",
-    "\n",
-    "def load_clean() -> pd.DataFrame:\n",
-    "    return pd.read_csv(clean_data_path())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
-   "id": "seasonal-employee",
+   "id": "opposite-packaging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +72,7 @@
     "    \n",
     "    starter_: tuple[int,...] = (0,1) if kwargs.get('starter') is None else ( int(kwargs['starter']), )\n",
     "    \n",
-    "    df: pd.DataFrame = (load_clean()\n",
+    "    df: pd.DataFrame = (fm.load_clean_data()\n",
     "                        .pipe(lambda df_: df_.loc[df_['starter'].isin(starter_)])\n",
     "                        [features]\n",
     "                       )\n",
@@ -119,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "controlled-international",
+   "id": "national-scottish",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acute-weapon",
+   "id": "essential-professional",
    "metadata": {},
    "source": [
     "- **As one can see, *pts* has the highest correlaion with fpts, which makes sense as NBA players with high fpts are more likely to have gotten relatively high points as compared to assists or rebounds, despite these two stats having higher multipliers. Therefore one can possibly conclude that scoring players might be better picks than rebound/assist players**\n",
@@ -164,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "sharp-stephen",
+   "id": "technical-growing",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grateful-monthly",
+   "id": "ultimate-colleague",
    "metadata": {},
    "source": [
     "-*Not much realtionship with* fpts *but a very strong correlation with* ts"
@@ -207,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "loving-concrete",
+   "id": "hungry-thumb",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "compressed-fitting",
+   "id": "constant-stable",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "explicit-pencil",
+   "id": "turned-scoop",
    "metadata": {},
    "source": [
     "- *While it is not good practice to try and delve too deep into reasons why changes may occur without further investigating, one can still see that points and minutes played maintain a strong relationship while assists, rebounds, usg becomes weaker for players coming off the bench. Therefore if one is selecting nonstarters, one would see the best return on fpts if getting the primary scorer for bench players and/or nonstarters playing significant minutes, two factors most likely to be heavily intersected*\n",
@@ -284,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "brutal-thing",
+   "id": "sublime-frequency",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worth-bristol",
+   "id": "vanilla-belfast",
    "metadata": {},
    "source": [
     "- **One can easily see now that usage becomes much better for predicting fpts when taking its product with minutes played rather than just usage alone**"
@@ -331,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "behavioral-houston",
+   "id": "legislative-merit",
    "metadata": {},
    "outputs": [],
    "source": []
