--- a/src/eda-heatmaps.ipynb
+++ b/src/eda-heatmaps.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "applied-mileage",
+   "id": "planned-peter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "registered-submission",
+   "execution_count": 2,
+   "id": "charged-optimum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "italian-screw",
+   "id": "diverse-specific",
    "metadata": {},
    "source": [
     "#### Exploring feature relationships\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "opposite-packaging",
+   "id": "animated-appearance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "national-scottish",
+   "execution_count": 4,
+   "id": "durable-macro",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "essential-professional",
+   "id": "hydraulic-point",
    "metadata": {},
    "source": [
     "- **As one can see, *pts* has the highest correlaion with fpts, which makes sense as NBA players with high fpts are more likely to have gotten relatively high points as compared to assists or rebounds, despite these two stats having higher multipliers. Therefore one can possibly conclude that scoring players might be better picks than rebound/assist players**\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "technical-growing",
+   "id": "advised-shipping",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ultimate-colleague",
+   "id": "secret-string",
    "metadata": {},
    "source": [
     "-*Not much realtionship with* fpts *but a very strong correlation with* ts"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "hungry-thumb",
+   "id": "coastal-authorization",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "constant-stable",
+   "id": "encouraging-musician",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "turned-scoop",
+   "id": "human-athens",
    "metadata": {},
    "source": [
     "- *While it is not good practice to try and delve too deep into reasons why changes may occur without further investigating, one can still see that points and minutes played maintain a strong relationship while assists, rebounds, usg becomes weaker for players coming off the bench. Therefore if one is selecting nonstarters, one would see the best return on fpts if getting the primary scorer for bench players and/or nonstarters playing significant minutes, two factors most likely to be heavily intersected*\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "sublime-frequency",
+   "id": "acoustic-rebound",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vanilla-belfast",
+   "id": "guided-orientation",
    "metadata": {},
    "source": [
     "- **One can easily see now that usage becomes much better for predicting fpts when taking its product with minutes played rather than just usage alone**"
@@ -319,7 +319,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legislative-merit",
+   "id": "sonic-memorabilia",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "incredible-spank",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "australian-little",
+   "metadata": {},
+   "source": [
+    "#### Important Note Regarding Data\n",
+    "\n",
+    "- While it seems that there are many strong patterns and relationships evident in this dataset, it is extemely import to remember that these features are not wholly independent from one another. \n",
+    "    - Rather they tell an important story about what player profiles in general are good for competing in fantasy: lots of minutes, and high usage/good scorers (usage is derived from how many shots a player takes in that game, so these two features are intertwined).\n",
+    "    - When choosing players who are good at defense, players who get steals are better than players who get blocks because of the opportunities stealing the ball provides for that player.\n",
+    "\n",
+    "- When trying to construct a predictive model for fantasy points, it will be difficult to incorporate most of this data for two reasons:\n",
+    "    1. The high levels of dependence among features\n",
+    "    2. The lack of information prior to the game regarding most of these features. One can use the mean/median of players for these features for determining if in general they are good fantasy players, but one cannot plug these stats in as inputs into a model as it will cause issues.\n",
+    "    3. Information such as the O/U and spread (given by Las Vegas prior to each game and based on historical team outcomes, and related to `total_pts` and `pts_diff`) are examples of information that can be plugged into a predictive model, as well as other data regarding teams/matchups such as pace and defensive rtg (need to get from somewhere else) \n",
+    "\n",
+    "- ***This dataset as it exists now is much more useful for inference than prediction***\n",
+    "\n",
+    "- When building a predictive model, will most likely only be using minutes played and usage as inputs (medians) as these remain relatively constant for players compared to most other stats: NBA offenses tend to revolve around the star players getting more of the shots/pts whereas it is much easier for volatility to occur in stats such as rebounds, steals, and blocks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "warming-subsection",
    "metadata": {},
    "outputs": [],
    "source": []
