updated names, cleaning, and added slate info

--- a/src/adding-team-data.ipynb
+++ b/src/adding-team-data.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cleared-relative",
+   "execution_count": 1,
+   "id": "herbal-bradford",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "incredible-convert",
+   "execution_count": 2,
+   "id": "international-analyst",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,15 +24,67 @@
     "url = 'https://www.basketball-reference.com/boxscores/202302140LAC.html'\n",
     "\n",
     "page = requests.get(url)\n",
-    "soup = BeautifulSoup(page.text, 'html.parser')\n",
     "\n",
-    "# stat_tables = soup.find_all('table',limit=4)  "
+    "\n",
+    "\n",
+    "soup = BeautifulSoup(page.text, 'html.parser')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "crucial-chancellor",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stat_tables = soup.find_all('table',limit=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "endangered-psychology",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all('div', {'class': 'table_container is_setup'})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "promising-master",
+   "id": "statistical-mortgage",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "page.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "baking-radical",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# page.text.replace('suppress_all stats_table', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "located-metallic",
    "metadata": {},
    "outputs": [],
    "source": []
