--- a/src/cleaning.ipynb
+++ b/src/cleaning.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "rental-cutting",
+   "execution_count": null,
+   "id": "favorite-consensus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-supplier",
+   "id": "oriental-bidding",
    "metadata": {},
    "source": [
     "#### Programming Note:\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "younger-advantage",
+   "id": "robust-threshold",
    "metadata": {},
    "source": [
     "#### Data Note\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "nominated-regression",
+   "id": "lined-snake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "designing-spare",
+   "id": "fluid-front",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specialized-jonathan",
+   "id": "variable-chase",
    "metadata": {},
    "source": [
     "### Get basic overview"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "widespread-monte",
+   "id": "organizational-market",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "hungarian-philadelphia",
+   "id": "increased-warrior",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "major-custom",
+   "id": "juvenile-bench",
    "metadata": {},
    "source": [
     "**Since I scraped this data myself, there should not be very many missing values, except on the rare occassion the scraper adds a blank space for a name after injuries and then fills the stats as if they were a player who DNP that game**\n",
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "oriented-terrain",
+   "id": "rocky-qatar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "opposite-issue",
+   "id": "timely-flashing",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charged-reggae",
+   "id": "experimental-conviction",
    "metadata": {},
    "source": [
     "#### clean_data():\n",
@@ -211,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "automated-constitution",
+   "execution_count": 8,
+   "id": "positive-profession",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,8 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "burning-insider",
+   "execution_count": 9,
+   "id": "iraqi-marine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,9 @@
     "        'stl',\n",
     "        'blk',\n",
     "        'tov',\n",
-    "        'pf'\n",
+    "        'pf',\n",
+    "        'ortg',\n",
+    "        'drtg'\n",
     "    )\n",
     "        \n",
     "    rename_cols: dict[str,str] = {\n",
@@ -295,8 +297,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "handed-engine",
+   "execution_count": 10,
+   "id": "essential-explosion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,8 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "unsigned-signature",
+   "execution_count": 11,
+   "id": "floral-athens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,8 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "original-continuity",
+   "execution_count": 12,
+   "id": "sealed-wyoming",
    "metadata": {},
    "outputs": [
     {
@@ -374,12 +376,12 @@
       " 42  blk_perc    18362 non-null  float64\n",
       " 43  tov_perc    18362 non-null  float64\n",
       " 44  usg         18362 non-null  float64\n",
-      " 45  ortg        18362 non-null  float64\n",
-      " 46  drtg        18362 non-null  float64\n",
+      " 45  ortg        18362 non-null  int64  \n",
+      " 46  drtg        18362 non-null  int64  \n",
       " 47  bpm         18362 non-null  float64\n",
       " 48  total_pts   18362 non-null  int64  \n",
       " 49  pts_diff    18362 non-null  int64  \n",
-      "dtypes: float64(22), int64(22), object(6)\n",
+      "dtypes: float64(20), int64(24), object(6)\n",
       "memory usage: 7.0+ MB\n"
      ]
     }
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "diverse-siemens",
+   "id": "southwest-handbook",
    "metadata": {},
    "source": [
     "#### Final check that all cleaning tasks came out as desired\n",
@@ -402,8 +404,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "confident-jesus",
+   "execution_count": 13,
+   "id": "arbitrary-flour",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,8 +424,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "numerical-cycling",
+   "execution_count": 14,
+   "id": "normal-tournament",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spectacular-politics",
+   "id": "dirty-model",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -441,7 +443,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -455,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
